Создал миксин fontFace для подключения нестандартных шрифтов

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,7 +13,7 @@ block top-position
 block columns
     main.content.content__no-cols.col-12
         article.page.textblock
-            h1.mb-5= title
+            h1.text-primary.mb-5= title
 
 block bottom-position
     section.bottom-position.mt-5
