--- a/src/components/main-menu/main-menu.pug
+++ b/src/components/main-menu/main-menu.pug
@@ -1,13 +1,11 @@
-.collapse.navbar-collapse
-    ul.navbar-nav.mr-auto
-        -
-            var menuData = {
-                "Пункт 1" : "test",
-                "Пункт 2" : "#"
-            }
-        each name, index in menuData
-            li.nav-item
-                if(name == '#')
-                    a.nav-link(href=name)= index
-                else
-                    a.nav-link(href=name + ".html")= index
+nav.main-menu.mb-6
+    .container
+        //- Hamburger
+        include ../hamburger/hamburger
+
+        //- Menu list
+        ul.main-menu__nav
+            each item in navData
+                li
+                    a(href= item.link)
+                        = item.text
