--- a/src/base/styles.sass
+++ b/src/base/styles.sass
@@ -22,12 +22,11 @@
  */
 @import "../components/header/header"
 @import "../components/logo/logo"
-@import "../components/search/search"
-@import "../components/main-menu/main-menu"
-@import "../components/main-col/main-col"
-@import "../components/footer/footer"
-@import '../components/main-wrap/main-wrap'
+@import "../components/menu/menu"
+@import "../components/content/content"
+@import '../components/wrapper/wrapper'
 @import '../components/textblock/textblock'
+@import "../components/footer/footer"
 
 /**
  * Dev blocks
