--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,5 +1,3 @@
-header.header.mt-3.mb-4
+header.header
     .container
-        nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
-            a.navbar-brand(href="/") Название сайта
-            include ../main-menu/main-menu
+        include ../menu/menu
