--- a/src/index.pug
+++ b/src/index.pug
@@ -11,7 +11,7 @@ block top-position
                 .module__title Модуль в позиции TOP
 
 block columns
-    main.content.content__no-cols.col-12
+    main.content__no-cols.col-12
         article.page.textblock
             h1.text-primary.mb-5= title
 
