--- a/src/base/_fonts.sass
+++ b/src/base/_fonts.sass
@@ -5,11 +5,5 @@
  * Helvetica
  */
 
-// Light
-@include fontFace('Helvetica', 'helvetica-light', 'normal', 'normal')
-
-// Light italic
-@include fontFace('Helvetica', 'helvetica-light-italic', 'normal', 'italic')
-
 // Regular
-@include fontFace('Helvetica', 'helvetica-regular', 'normal', 'normal')
+@include fontFace('Font name', 'filename', 'normal', 'normal')
