--- a/src/base/page.pug
+++ b/src/base/page.pug
@@ -2,11 +2,11 @@ include ../mixins/pug/svg-icon
 block variables
 
 doctype html
-html(lang="en")
+html(lang="ru")
     head
         meta(charset='UTF-8')
-        meta(name="theme-color" content="#168dd3")
-        meta(http-equiv='X-UA-Compatible', content="IE = edge")
+        meta(name="theme-color" content="#fff")
+        meta(http-equiv='X-UA-Compatible', content="IE=edge")
         meta(name='viewport', content='initial-scale=1.0, width=device-width')
         title #{title}
 
