Мелкие правки фреймворка Bootstrap

--- a/src/base/styles.sass
+++ b/src/base/styles.sass
@@ -2,7 +2,7 @@
    INCLUDS
    ========================================================================= */
 
-@import './variables'
+@import 'variables'
 //@import '../mixins/sass/sprite-img'
 @import '../mixins/sass/sprite-svg'
 @import '../mixins/sass/pos-center'
