--- a/src/libs/bootstrap/bootstrap.scss
+++ b/src/libs/bootstrap/bootstrap.scss
@@ -12,7 +12,7 @@
 @import "../../../node_modules/bootstrap/scss/tables";
 @import "../../../node_modules/bootstrap/scss/forms";
 @import "../../../node_modules/bootstrap/scss/buttons";
-@import "../../../node_modules/bootstrap/scss/transitions";
+//@import "../../../node_modules/bootstrap/scss/transitions";
 //@import "../../../node_modules/bootstrap/scss/dropdown";
 //@import "../../../node_modules/bootstrap/scss/button-group";
 //@import "../../../node_modules/bootstrap/scss/input-group";
@@ -35,5 +35,24 @@
 //@import "../../../node_modules/bootstrap/scss/popover";
 //@import "../../../node_modules/bootstrap/scss/carousel";
 @import "../../../node_modules/bootstrap/scss/spinners";
-@import "../../../node_modules/bootstrap/scss/utilities";
+//@import "../../../node_modules/bootstrap/scss/utilities";
 @import "../../../node_modules/bootstrap/scss/print";
+
+// Utilites
+@import "../../../node_modules/bootstrap/scss/utilities/align";
+@import "../../../node_modules/bootstrap/scss/utilities/background";
+//@import "../../../node_modules/bootstrap/scss/utilities/borders";
+//@import "../../../node_modules/bootstrap/scss/utilities/clearfix";
+@import "../../../node_modules/bootstrap/scss/utilities/display";
+@import "../../../node_modules/bootstrap/scss/utilities/embed";
+@import "../../../node_modules/bootstrap/scss/utilities/flex";
+//@import "../../../node_modules/bootstrap/scss/utilities/float";
+//@import "../../../node_modules/bootstrap/scss/utilities/overflow";
+@import "../../../node_modules/bootstrap/scss/utilities/position";
+//@import "../../../node_modules/bootstrap/scss/utilities/screenreaders";
+//@import "../../../node_modules/bootstrap/scss/utilities/shadows";
+@import "../../../node_modules/bootstrap/scss/utilities/sizing";
+//@import "../../../node_modules/bootstrap/scss/utilities/stretched-link";
+@import "../../../node_modules/bootstrap/scss/utilities/spacing";
+@import "../../../node_modules/bootstrap/scss/utilities/text";
+//@import "../../../node_modules/bootstrap/scss/utilities/visibility";
