--- a/src/base/styles.sass
+++ b/src/base/styles.sass
@@ -23,6 +23,7 @@
 @import "../components/header/header"
 @import "../components/logo/logo"
 @import "../components/menu/menu"
+@import "../components/hamburger/hamburger"
 @import "../components/content/content"
 @import '../components/wrapper/wrapper'
 @import '../components/textblock/textblock'
