Добавил компонент Pagination + стили Breadcrumbs

--- a/src/base/styles.sass
+++ b/src/base/styles.sass
@@ -21,12 +21,14 @@
  * Static blocks
  */
 @import "../components/header/header"
+@import "../components/breadcrumbs/breadcrumbs"
 @import "../components/logo/logo"
 @import "../components/menu/menu"
 @import "../components/hamburger/hamburger"
 @import "../components/content/content"
 @import '../components/wrapper/wrapper'
 @import '../components/textblock/textblock'
+@import '../components/pagination/pagination'
 @import "../components/footer/footer"
 
 /**
