--- a/src/base/base.pug
+++ b/src/base/base.pug
@@ -53,7 +53,7 @@ html(lang="ru")
                 block top-position
 
                 .container.main-container
-                    if(pageClass != 'homepage')
+                    if(pageClass == 'homepage')
                         //- Breadcrumbs
                         nav.breadcrumbs
                             ul.breadcrumbs__list
@@ -61,7 +61,7 @@ html(lang="ru")
                                     a(href="/") Главная
                                     span.breadcrumbs__divider /
 
-                                li.is--active #{title}
+                                li.is-active #{title}
 
                     .row.content
                         block columns
