--- a/src/index.pug
+++ b/src/index.pug
@@ -18,6 +18,9 @@ block columns
             p
                 != 'Строка текста с тегом <strong>выделения</strong>.'
 
+    .pagination
+        include ./components/pagination/pagination
+
 
 
 block bottom-position
@@ -25,3 +28,6 @@ block bottom-position
         .module
             .container
                 .module__title Модуль в позиции BOTTOM
+
+
+
