--- a/src/base/_variables.scss
+++ b/src/base/_variables.scss
@@ -2,10 +2,6 @@
 $font-family-base: "Roboto", sans-serif;
 
 // Colors
-$white: #fff;
-$black: #000;
-$d_gray: #1c1c1c;
-$l_gray: #c8c8c8;
 $blue: #435993;
 
 // Grid containers
@@ -19,3 +15,27 @@ $container-max-widths: (
 
 // Links
 //$link-color: $blue;
+//$link-decoration:                         none;
+//$link-hover-color:                        darken($link-color, 15%);
+//$link-hover-decoration:                   underline;
+// Darken percentage for links with `.text-*` class (e.g. `.text-success`)
+//$emphasized-link-hover-darken-percentage: 15% !default;
+
+// Spacing
+$spacer: 1rem !default;
+$spacers: () !default;
+$spacers: map-merge(
+	(
+		0: 0,
+		1: ($spacer * .25),
+		2: ($spacer * .5),
+		3: $spacer,
+		4: ($spacer * 1.5),
+		5: ($spacer * 3),
+		6: ($spacer * 1.875), // 30px
+		7: ($spacer * 2.5), // 40 px
+		8: ($spacer * 5), // 80px
+		10: ($spacer * 6.25) // 100px
+	),
+	$spacers
+);
