--- a/src/base/base.pug
+++ b/src/base/base.pug
@@ -52,8 +52,8 @@ html(lang="ru")
 
                 block top-position
 
-                .container.main-container
-                    if(pageClass == 'homepage')
+                .container
+                    if(pageClass != 'homepage')
                         //- Breadcrumbs
                         nav.breadcrumbs
                             ul.breadcrumbs__list
