--- a/src/base/styles.sass
+++ b/src/base/styles.sass
@@ -20,13 +20,14 @@
 /**
  * Static blocks
  */
+@import '../components/wrapper/wrapper'
 @import "../components/header/header"
-@import "../components/breadcrumbs/breadcrumbs"
 @import "../components/logo/logo"
 @import "../components/menu/menu"
 @import "../components/hamburger/hamburger"
+@import "../components/breadcrumbs/breadcrumbs"
 @import "../components/content/content"
-@import '../components/wrapper/wrapper'
+@import "../components/module/module"
 @import '../components/textblock/textblock'
 @import '../components/pagination/pagination'
 @import "../components/footer/footer"
@@ -42,5 +43,6 @@
  * Libs styles
  */
 @import '../libs/magnific-popup/main'
-@import '../libs/owl-carousel/owl.carousel'
-@import '../libs/owl-carousel/owl.theme.default'
+//@import '../libs/owl-carousel/owl.carousel'
+//@import '../libs/owl-carousel/owl.theme.default'
+@import '../libs/go-top/go-top'
