--- a/src/index.pug
+++ b/src/index.pug
@@ -18,8 +18,8 @@ block columns
             p
                 != 'Строка текста с тегом <strong>выделения</strong>.'
 
-    .pagination
-        include ./components/pagination/pagination
+    //.pagination
+    //    include ./components/pagination/pagination
 
 
 
