--- a/src/base/styles.sass
+++ b/src/base/styles.sass
@@ -35,7 +35,7 @@
 /**
  * Dev blocks
  */
-
+@import "../components/preloader/preloader"
 
 
 
@@ -46,3 +46,4 @@
 //@import '../libs/owl-carousel/owl.carousel'
 //@import '../libs/owl-carousel/owl.theme.default'
 @import '../libs/go-top/go-top'
+@import '../libs/blazy/blazy'
