--- a/src/components/hamburger/_hamburger.sass
+++ b/src/components/hamburger/_hamburger.sass
@@ -6,8 +6,6 @@
     display: none
 
     @media (max-width: 768px)
-        background-color: $d_gray
-        border-radius: 3px
         align-items: center
         display: flex
         flex-direction: column
@@ -21,11 +19,8 @@
         width: 40px
         z-index: 10
 
-        &:hover
-            background-color: darken($d_gray, 10%)
-
         &::before, &::after, > span
-            background: $white
+            background: $dark
             border-radius: 3px
             content: ""
             display: block
