Переименовал файл styles.sass в main.sass

--- a/src/base/base.pug
+++ b/src/base/base.pug
@@ -37,7 +37,7 @@ html(lang="ru")
         link(rel='apple-touch-icon', sizes='1024x1024', href='./images/favicons/apple-touch-icon-1024x1024.png')
         link(rel='icon', type='image/png', sizes='228x228', href='./images/favicons/coast-228x228.png')
         link(rel='yandex-tableau-widget', href='./images/favicons/yandex-browser-manifest.json')
-        link(rel='stylesheet', href='./css/styles.dev.css')
+        link(rel='stylesheet', href='./css/main.dev.css')
 
         <!--[if lt IE 9]>
         script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
