--- a/src/base/base.pug
+++ b/src/base/base.pug
@@ -14,29 +14,29 @@ html(lang="ru")
         meta(name='apple-mobile-web-app-status-bar-style', content='black-translucent')
         meta(name='apple-mobile-web-app-title' content="")
         meta(name='msapplication-TileColor', content='#10cfe6')
-        meta(name='msapplication-TileImage', content='./images/favicons/mstile-144x144.png')
-        meta(name='msapplication-config', content='./images/favicons/browserconfig.xml')
+        meta(name='msapplication-TileImage', content='/images/favicons/mstile-144x144.png')
+        meta(name='msapplication-config', content='/images/favicons/browserconfig.xml')
 
         title #{title}
 
-        link(rel='shortcut icon', href='./images/favicons/favicon.ico')
-        link(rel='icon', type='image/png', sizes='16x16', href='./images/favicons/favicon-16x16.png')
-        link(rel='icon', type='image/png', sizes='32x32', href='./images/favicons/favicon-32x32.png')
-        link(rel='icon', type='image/png', sizes='48x48', href='./images/favicons/favicon-48x48.png')
-        link(rel='manifest', href='./images/favicons/manifest.json')
-        link(rel='apple-touch-icon', sizes='57x57', href='./images/favicons/apple-touch-icon-57x57.png')
-        link(rel='apple-touch-icon', sizes='60x60', href='./images/favicons/apple-touch-icon-60x60.png')
-        link(rel='apple-touch-icon', sizes='72x72', href='./images/favicons/apple-touch-icon-72x72.png')
-        link(rel='apple-touch-icon', sizes='76x76', href='./images/favicons/apple-touch-icon-76x76.png')
-        link(rel='apple-touch-icon', sizes='114x114', href='./images/favicons/apple-touch-icon-114x114.png')
-        link(rel='apple-touch-icon', sizes='120x120', href='./images/favicons/apple-touch-icon-120x120.png')
-        link(rel='apple-touch-icon', sizes='144x144', href='./images/favicons/apple-touch-icon-144x144.png')
-        link(rel='apple-touch-icon', sizes='152x152', href='./images/favicons/apple-touch-icon-152x152.png')
-        link(rel='apple-touch-icon', sizes='167x167', href='./images/favicons/apple-touch-icon-167x167.png')
-        link(rel='apple-touch-icon', sizes='180x180', href='./images/favicons/apple-touch-icon-180x180.png')
-        link(rel='apple-touch-icon', sizes='1024x1024', href='./images/favicons/apple-touch-icon-1024x1024.png')
-        link(rel='icon', type='image/png', sizes='228x228', href='./images/favicons/coast-228x228.png')
-        link(rel='yandex-tableau-widget', href='./images/favicons/yandex-browser-manifest.json')
+        link(rel='shortcut icon', href='/images/favicons/favicon.ico')
+        link(rel='icon', type='image/png', sizes='16x16', href='/images/favicons/favicon-16x16.png')
+        link(rel='icon', type='image/png', sizes='32x32', href='/images/favicons/favicon-32x32.png')
+        link(rel='icon', type='image/png', sizes='48x48', href='/images/favicons/favicon-48x48.png')
+        link(rel='manifest', href='/images/favicons/manifest.json')
+        link(rel='apple-touch-icon', sizes='57x57', href='/images/favicons/apple-touch-icon-57x57.png')
+        link(rel='apple-touch-icon', sizes='60x60', href='/images/favicons/apple-touch-icon-60x60.png')
+        link(rel='apple-touch-icon', sizes='72x72', href='/images/favicons/apple-touch-icon-72x72.png')
+        link(rel='apple-touch-icon', sizes='76x76', href='/images/favicons/apple-touch-icon-76x76.png')
+        link(rel='apple-touch-icon', sizes='114x114', href='/images/favicons/apple-touch-icon-114x114.png')
+        link(rel='apple-touch-icon', sizes='120x120', href='/images/favicons/apple-touch-icon-120x120.png')
+        link(rel='apple-touch-icon', sizes='144x144', href='/images/favicons/apple-touch-icon-144x144.png')
+        link(rel='apple-touch-icon', sizes='152x152', href='/images/favicons/apple-touch-icon-152x152.png')
+        link(rel='apple-touch-icon', sizes='167x167', href='/images/favicons/apple-touch-icon-167x167.png')
+        link(rel='apple-touch-icon', sizes='180x180', href='/images/favicons/apple-touch-icon-180x180.png')
+        link(rel='apple-touch-icon', sizes='1024x1024', href='/images/favicons/apple-touch-icon-1024x1024.png')
+        link(rel='icon', type='image/png', sizes='228x228', href='/images/favicons/coast-228x228.png')
+        link(rel='yandex-tableau-widget', href='/images/favicons/yandex-browser-manifest.json')
         link(rel='stylesheet', href='./css/main.dev.css')
 
         <!--[if lt IE 9]>
